[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/HUD/Interface/Commands/CommandHandler.gd" type="Script" id=1]
[ext_resource path="res://Assets/InterfaceStyle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/TextStyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/HUD/Interface/Commands/CommandConsole.gd" type="Script" id=4]
[ext_resource path="res://Assets/CommandLineStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/ConsoleOutputStyle.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/ConsoleStyle.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/lineeditStyle.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.411765, 0.572549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0470588, 0.32549, 0.427451, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 650, 98 )

[node name="CommandConsole" type="Control" groups=["persist"]]
anchor_top = 0.699
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.300049
script = ExtResource( 4 )

[node name="CommandHandler" type="Node" parent="."]
script = ExtResource( 1 )

[node name="BGColour" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -548, -122 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CommandLineBody" type="StaticBody2D" parent="BGColour"]
position = Vector2( 202, 10 )
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="BGColour/CommandLineBody"]
visible = false
position = Vector2( 448, 88 )
shape = SubResource( 2 )

[node name="Status" type="Panel" parent="."]
anchor_left = 0.015
anchor_top = 0.171
anchor_right = 0.254
anchor_bottom = 0.953
margin_left = 0.5
margin_top = -0.0810013
margin_right = -0.200012
margin_bottom = -0.0830078
rect_pivot_offset = Vector2( -548, -122 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="Status"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -29.0
margin_right = -202.0
margin_bottom = -174.0
custom_fonts/font = ExtResource( 2 )
text = "STATUS"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="inputPanel" type="Panel" parent="."]
anchor_left = 0.262
anchor_top = 0.76
anchor_right = 0.662
anchor_bottom = 1.0
margin_left = -0.600006
margin_top = 0.0647583
margin_right = -0.600098
margin_bottom = -10.0201
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="inputPanel"]
anchor_left = 0.031
anchor_top = 0.073
anchor_right = 0.969
anchor_bottom = 0.951
margin_left = -0.220001
margin_top = 0.00699973
margin_right = 0.219971
margin_bottom = 0.00899887
custom_fonts/font = ExtResource( 3 )
custom_styles/read_only = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleLabel" type="Label" parent="."]
anchor_left = 0.269
anchor_top = 0.033
anchor_right = 0.342
anchor_bottom = 0.137
margin_left = 0.299957
margin_top = 0.0370002
margin_right = -0.600006
margin_bottom = 0.0929985
custom_fonts/font = ExtResource( 2 )
text = "CONSOLE"

[node name="output" type="TextEdit" parent="."]
anchor_left = 0.262
anchor_top = 0.171
anchor_right = 0.662
anchor_bottom = 0.733
margin_left = -0.600006
margin_top = -0.110428
margin_right = -0.600098
margin_bottom = -0.0756989
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
readonly = true
fold_gutter = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
smooth_scrolling = true
v_scroll_speed = 10.0
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MacrosLabel" type="Label" parent="."]
anchor_left = 0.682
anchor_top = 0.037
anchor_right = 0.748
anchor_bottom = 0.138
margin_left = -0.600037
margin_top = -0.00969219
margin_right = 0.599976
margin_bottom = 0.0712814
custom_fonts/font = ExtResource( 2 )
text = "MACROS"

[node name="MacroOutput" type="TextEdit" parent="."]
anchor_left = 0.669
anchor_top = 0.17
anchor_right = 0.985
anchor_bottom = 0.954
margin_left = 0.299988
margin_top = 0.10659
margin_right = -0.5
margin_bottom = -0.0371399
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
readonly = true
fold_gutter = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
smooth_scrolling = true
v_scroll_speed = 10.0
wrap_enabled = true

[connection signal="text_entered" from="inputPanel/input" to="." method="_on_input_text_entered"]
